[gd_scene load_steps=23 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://main/screens/ConnectionScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.tscn" type="PackedScene" id=3]
[ext_resource path="res://main/screens/MatchScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://main/UILayer.gd" type="Script" id=5]
[ext_resource path="res://main/screens/ReadyScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://main/screens/TitleScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/monogram.tres" type="DynamicFont" id=8]
[ext_resource path="res://main/Music.gd" type="Script" id=9]
[ext_resource path="res://assets/music/Detective Anthem.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/music/Rush Beyond All.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/music/Sunny Sands.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/theme.tres" type="Theme" id=13]
[ext_resource path="res://main/screens/LeaderboardScreen.tscn" type="PackedScene" id=14]
[ext_resource path="res://main/screens/CreditsScreen.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/ui/sound-on.png" type="Texture" id=16]
[ext_resource path="res://main/screens/TransparentButton.gd" type="Script" id=17]
[ext_resource path="res://assets/ui/back.png" type="Texture" id=18]
[ext_resource path="res://assets/blue_button_theme.tres" type="Theme" id=19]
[ext_resource path="res://components/ScoreContainer.gd" type="Script" id=20]
[ext_resource path="res://components/HealthUI.tscn" type="PackedScene" id=21]

[sub_resource type="Animation" id=1]
resource_name = "win_messaging"
length = 13.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Overlay/Message:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ),
"transitions": PoolRealArray( -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Overlay/Message:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 8, 9, 10, 12 ),
"transitions": PoolRealArray( 1, -2, -2, -2, -2, 1, -2, -2, 1, -2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.760784, 0.0509804, 0.0509804, 1 ), Color( 0.803922, 0.0823529, 0.886275, 1 ), Color( 0.113725, 0.898039, 0, 1 ), Color( 0, 0.956863, 0.686275, 1 ), Color( 1, 0.235294, 0.592157, 1 ), Color( 0.529412, 0, 0.545098, 1 ), Color( 0.831373, 0.741176, 0, 1 ), Color( 0, 0.901961, 0.160784, 1 ), Color( 0.611765, 0, 0.858824, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Game" parent="." instance=ExtResource( 3 )]

[node name="UILayer" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 5 )

[node name="Screens" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TitleScreen" parent="UILayer/Screens" instance=ExtResource( 7 )]
visible = false

[node name="ConnectionScreen" parent="UILayer/Screens" instance=ExtResource( 2 )]
visible = false

[node name="MatchScreen" parent="UILayer/Screens" instance=ExtResource( 4 )]
visible = false

[node name="ReadyScreen" parent="UILayer/Screens" instance=ExtResource( 6 )]
visible = false

[node name="LeaderboardScreen" parent="UILayer/Screens" instance=ExtResource( 14 )]
visible = false

[node name="CreditsScreen" parent="UILayer/Screens" instance=ExtResource( 15 )]
visible = false

[node name="Overlay" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 19 )

[node name="Message" type="Label" parent="UILayer/Overlay"]
visible = false
anchor_right = 1.0
margin_top = 35.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 317, 19 )
custom_fonts/font = ExtResource( 8 )
text = "Waiting for players..."
align = 1

[node name="BackButton" type="Button" parent="UILayer/Overlay"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -41.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 30.0
rect_min_size = Vector2( 35, 35 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 18 )
clip_text = true
expand_icon = true
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteButton" type="Button" parent="UILayer/Overlay"]
margin_left = 2.0
margin_top = 2.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 35, 35 )
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
icon = ExtResource( 16 )
clip_text = true
expand_icon = true
script = ExtResource( 17 )

[node name="HealthUI" parent="UILayer/Overlay" instance=ExtResource( 21 )]
visible = false
mouse_filter = 2

[node name="ScoreContainer1v1" type="PanelContainer" parent="UILayer/Overlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -29.5
margin_top = -53.0
margin_right = 29.5
margin_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 13 )
script = ExtResource( 20 )

[node name="ScoreLabel" type="Label" parent="UILayer/Overlay/ScoreContainer1v1"]
margin_left = 2.0
margin_top = 5.0
margin_right = 57.0
margin_bottom = 38.0
text = "0:0"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="UILayer/Overlay/ScoreContainer1v1"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="UILayer"]
anims/win_messaging = SubResource( 1 )

[node name="Music" type="Node" parent="."]
script = ExtResource( 9 )

[node name="DetectiveAnthem" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 10 )
bus = "Music"

[node name="RushBeyondAll" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 11 )
bus = "Music"

[node name="SunnySands" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 12 )
bus = "Music"

[node name="Tween" type="Tween" parent="Music"]

[connection signal="game_over" from="Game" to="." method="_on_Game_game_over"]
[connection signal="game_started" from="Game" to="." method="_on_Game_game_started"]
[connection signal="player_dead" from="Game" to="." method="_on_Game_player_dead"]
[connection signal="back_button" from="UILayer" to="." method="_on_UILayer_back_button"]
[connection signal="change_screen" from="UILayer" to="." method="_on_UILayer_change_screen"]
[connection signal="play_local" from="UILayer/Screens/TitleScreen" to="." method="_on_TitleScreen_play_local"]
[connection signal="play_online" from="UILayer/Screens/TitleScreen" to="." method="_on_TitleScreen_play_online"]
[connection signal="ready_pressed" from="UILayer/Screens/ReadyScreen" to="." method="_on_ReadyScreen_ready_pressed"]
[connection signal="pressed" from="UILayer/Overlay/BackButton" to="UILayer" method="_on_BackButton_pressed"]
[connection signal="toggled" from="UILayer/Overlay/MuteButton" to="UILayer/Overlay/MuteButton" method="_on_MuteButton_toggled"]
[connection signal="song_finished" from="Music" to="." method="_on_Music_song_finished"]
[connection signal="tween_completed" from="Music/Tween" to="Music" method="_on_Tween_tween_completed"]
